--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录 - Hoho的AI实验室</title>
+    <title>登录1 - Hoho的AI实验室</title>
     <style>
         * {
             margin: 0;
