更新主色调为#4598F0

--- a/portal_simulator.html
+++ b/portal_simulator.html
@@ -9,9 +9,9 @@
     /* ===== 设计令牌 （现代化样式更新）==== */
     :root {
       /* 颜色 - 更现代的调色板 */
-      --blue-primary: #3b82f6;
-      --blue-light: #eff6ff;
-      --blue-dark: #1d4ed8;
+      --blue-primary: #4598F0;
+      --blue-light: #e6f2ff;
+      --blue-dark: #3477b3;
       --gray-100: #f3f4f6;
       --gray-200: #e5e7eb;
       --gray-300: #d1d5db;
