--- a/index.html
+++ b/index.html
@@ -83,191 +83,238 @@
             --transition-slow: 0.5s ease;
         }
 
-        /* Neo Brutalism风格变量 */
+        /* Neo Brutalism风格变量 - 优化版 */
         :root.neo-brutalism {
-            --primary-color: #ff3e00;
-            --primary-dark: #e03600;
-            --primary-light: #ff6a33;
-            --secondary-color: #00d4ff;
-            --secondary-dark: #00b8e6;
-            --secondary-light: #33e0ff;
-            --accent-color: #ffdd00;
-            --accent-dark: #e6c500;
-            --accent-light: #ffe633;
+            --primary-color: #6366f1;
+            --primary-dark: #4f46e5;
+            --primary-light: #818cf8;
+            --secondary-color: #ec4899;
+            --secondary-dark: #db2777;
+            --secondary-light: #f472b6;
+            --accent-color: #14b8a6;
+            --accent-dark: #0d9488;
+            --accent-light: #2dd4bf;
             --background: #ffffff;
             --surface: #ffffff;
-            --text-primary: #000000;
-            --text-secondary: #333333;
-            --text-muted: #666666;
-            --border: #000000;
-            --border-light: #333333;
-            --border-dark: #000000;
-            --shadow-sm: 4px 4px 0px 0px rgba(0, 0, 0, 1);
-            --shadow-md: 6px 6px 0px 0px rgba(0, 0, 0, 1);
-            --shadow-lg: 8px 8px 0px 0px rgba(0, 0, 0, 1);
-            --shadow-xl: 10px 10px 0px 0px rgba(0, 0, 0, 1);
-            --shadow-2xl: 12px 12px 0px 0px rgba(0, 0, 0, 1);
+            --text-primary: #1f2937;
+            --text-secondary: #4b5563;
+            --text-muted: #6b7280;
+            --border: #1f2937;
+            --border-light: #374151;
+            --border-dark: #111827;
+            --shadow-sm: 3px 3px 0px 0px rgba(31, 41, 55, 0.8);
+            --shadow-md: 5px 5px 0px 0px rgba(31, 41, 55, 0.8);
+            --shadow-lg: 7px 7px 0px 0px rgba(31, 41, 55, 0.8);
+            --shadow-xl: 9px 9px 0px 0px rgba(31, 41, 55, 0.8);
+            --shadow-2xl: 11px 11px 0px 0px rgba(31, 41, 55, 0.8);
         }
 
         /* Neo Brutalism全局样式 */
         :root.neo-brutalism body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Inter', 'Arial', sans-serif;
             background-color: var(--background);
             color: var(--text-primary);
+            line-height: 1.6;
         }
 
         /* Neo Brutalism头部样式 */
         :root.neo-brutalism .header {
-            background: var(--primary-color);
+            background: linear-gradient(135deg, var(--primary-color) 0%, var(--primary-dark) 100%);
             color: white;
-            border: 4px solid var(--border);
-            border-radius: 0;
+            border: 3px solid var(--border);
+            border-radius: 8px;
             box-shadow: var(--shadow-lg);
-            padding: 32px 0;
+            padding: 40px 0;
             height: auto;
+            margin-bottom: 40px;
         }
 
         :root.neo-brutalism .header h1 {
-            font-size: 3.5rem;
-            font-weight: 900;
-            letter-spacing: -2px;
-            text-shadow: none;
-            animation: none;
+            font-size: 3rem;
+            font-weight: 800;
+            letter-spacing: -1px;
+            text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.2);
+            animation: slideInLeft 0.6s ease-out;
         }
 
         :root.neo-brutalism .header p {
-            font-size: 1.4rem;
-            font-weight: 600;
-            opacity: 1;
+            font-size: 1.2rem;
+            font-weight: 500;
+            opacity: 0.95;
+            animation: slideInLeft 0.6s ease-out 0.2s both;
         }
 
         /* Neo Brutalism项目卡片样式 */
         :root.neo-brutalism .project-card {
             background: var(--surface);
-            border: 4px solid var(--border);
-            border-radius: 0;
+            border: 2px solid var(--border);
+            border-radius: 12px;
             box-shadow: var(--shadow-md);
-            padding: 24px;
-            transition: all 0.2s ease;
-            background: var(--surface);
+            padding: 28px;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background: linear-gradient(145deg, var(--surface), #f8fafc);
+            position: relative;
+            overflow: hidden;
+        }
+
+        :root.neo-brutalism .project-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--primary-color), var(--secondary-color), var(--accent-color));
         }
 
         :root.neo-brutalism .project-card:hover {
-            transform: translate(4px, 4px);
-            box-shadow: var(--shadow-sm);
+            transform: translateY(-4px);
+            box-shadow: var(--shadow-lg);
             border-color: var(--primary-color);
         }
 
         :root.neo-brutalism .project-header {
-            margin-bottom: 16px;
+            margin-bottom: 18px;
+            display: flex;
+            align-items: center;
         }
 
         :root.neo-brutalism .project-icon {
-            width: 60px;
-            height: 60px;
-            border-radius: 0;
-            border: 3px solid var(--border);
-            background: var(--accent-color);
+            width: 50px;
+            height: 50px;
+            border-radius: 8px;
+            border: 2px solid var(--border);
+            background: linear-gradient(135deg, var(--accent-color), var(--accent-light));
             color: var(--text-primary);
-            font-size: 2rem;
+            font-size: 1.5rem;
+            margin-right: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: var(--shadow-sm);
         }
 
         :root.neo-brutalism .project-title {
-            font-size: 1.3rem;
-            font-weight: 900;
+            font-size: 1.25rem;
+            font-weight: 800;
             color: var(--text-primary);
-            margin-bottom: 8px;
+            margin-bottom: 6px;
+            line-height: 1.4;
         }
 
         :root.neo-brutalism .project-subtitle {
-            font-size: 0.95rem;
-            font-weight: 700;
+            font-size: 0.9rem;
+            font-weight: 600;
             color: var(--text-secondary);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         :root.neo-brutalism .project-description {
             font-size: 1rem;
             color: var(--text-secondary);
-            margin-bottom: 16px;
+            margin-bottom: 20px;
             font-weight: 500;
+            line-height: 1.6;
         }
 
         /* Neo Brutalism标签样式 */
         :root.neo-brutalism .tag {
             background: var(--secondary-color);
-            color: var(--text-primary);
-            padding: 8px 16px;
-            border-radius: 0;
-            font-size: 0.85rem;
-            font-weight: 800;
-            border: 3px solid var(--border);
-            box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
-            transition: all 0.2s ease;
+            color: white;
+            padding: 6px 14px;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            border: 1px solid var(--border);
+            box-shadow: var(--shadow-sm);
+            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         :root.neo-brutalism .tag:hover {
-            background: var(--accent-color);
-            color: var(--text-primary);
-            border-color: var(--border);
-            transform: translate(2px, 2px);
-            box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 1);
+            background: var(--secondary-dark);
+            color: white;
+            border-color: var(--border-dark);
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-md);
         }
 
         /* Neo Brutalism详情链接样式 */
         :root.neo-brutalism .project-detail-link {
-            background: var(--primary-color);
-            color: white;
-            padding: 8px 16px;
-            border-radius: 0;
-            font-size: 0.9rem;
-            font-weight: 800;
-            border: 3px solid var(--border);
-            box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 1);
-            transition: all 0.2s ease;
+            background: transparent;
+            color: var(--primary-color);
+            padding: 6px 12px;
+            border-radius: 6px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            border: 1px solid var(--primary-color);
+            box-shadow: var(--shadow-sm);
+            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
             margin-left: 8px;
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
         }
 
         :root.neo-brutalism .project-detail-link:hover {
-            background: var(--primary-dark);
+            background: var(--primary-color);
             color: white;
-            transform: translate(2px, 2px);
-            box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 1);
+            border-color: var(--primary-dark);
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-md);
         }
 
         :root.neo-brutalism .project-detail-link::after {
             content: "→";
-            margin-left: 4px;
+            margin-left: 2px;
+            font-size: 0.9rem;
         }
 
         /* Neo Brutalism按钮样式 */
         :root.neo-brutalism .project-link {
-            background: var(--primary-color);
+            background: linear-gradient(135deg, var(--primary-color), var(--primary-dark));
             color: white;
-            border: 4px solid var(--border);
-            border-radius: 0;
+            border: 2px solid var(--border);
+            border-radius: 8px;
             box-shadow: var(--shadow-md);
-            padding: 12px 24px;
-            font-weight: 800;
-            transition: all 0.2s ease;
+            padding: 14px 28px;
+            font-weight: 700;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         :root.neo-brutalism .project-link:hover {
-            transform: translate(3px, 3px);
-            box-shadow: var(--shadow-sm);
+            transform: translateY(-3px);
+            box-shadow: var(--shadow-lg);
+            background: linear-gradient(135deg, var(--primary-dark), var(--primary-color));
+        }
+
+        :root.neo-brutalism .project-link::after {
+            content: "→";
+            font-size: 1.1rem;
         }
 
         /* Neo Brutalism页脚样式 */
         :root.neo-brutalism .footer {
-            background: var(--secondary-color);
-            color: var(--text-primary);
-            border-top: 4px solid var(--border);
-            padding: 32px 0;
-            margin-top: 40px;
+            background: linear-gradient(135deg, var(--secondary-color), var(--secondary-dark));
+            color: white;
+            border-top: 2px solid var(--border);
+            padding: 40px 0;
+            margin-top: 60px;
+            text-align: center;
         }
 
         :root.neo-brutalism .footer p {
-            font-size: 1.1rem;
-            font-weight: 700;
+            font-size: 1rem;
+            font-weight: 600;
+            opacity: 0.95;
+            margin: 0;
         }
 
         /* Neo Brutalism响应式设计 */
